syntax = "proto3";

package pb;

option go_package = "./;pb";


message AuthReq {
    string uid = 1;
    string token = 2;
    uint32 deviceFlag = 3;
    int64 connID = 4;
}

message AuthResp {
    uint32 deviceLevel = 1;
}

message ResetReq {
    string nodeID = 1;
 }

message ClientCloseReq {
    string uid = 1;
    uint32 deviceFlag = 2;
    int64 connID = 3;
}

